gcc/testsuite/rust/rustc/ui/malformed/malformed-plugin-2.rs
#![feature(plugin)]
#![plugin="bleh"] // { dg-error "" "" { target *-*-* } }
// { dg-warning "" "" { target *-*-* } .-2 }

fn main() {}

